--- a/src/components/project2.1/addContactForm/AddContactForm.module.css
+++ b/src/components/project2.1/addContactForm/AddContactForm.module.css
@@ -2,8 +2,19 @@
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  width: 200px;
 }
 
 .label {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
   margin-bottom: 15px;
+  padding-left: 15px;
+}
+
+button {
+  max-width: 50%;
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
